# Rust-VoiceConversion

./: .gitignore  Cargo.toml  README.en.md  README.ja.md  README.md  RUN.en.md  RUN.ja.md  RUN.md  TODO.ja.md  TODO.md  build.bat  inspect_rmvpe.py  patch_hubert_pad.py  patch_rmvpe.py  setup.py  setup.spec
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/src/: main.rs
apps/tauri/ui/: README.md  app.js  index.html  package-lock.json  package.json  styles.css  tsconfig.json
apps/tauri/ui/src/: main.ts  styles.css
crates/vc-audio/: Cargo.toml
crates/vc-audio/src/: lib.rs
crates/vc-core/: Cargo.toml
crates/vc-core/src/: config.rs  error.rs  lib.rs  log_bridge.rs  pipeline.rs
crates/vc-inference/: Cargo.toml
crates/vc-inference/src/: audio_pipeline.rs  faiss_index.rs  ivf_index.rs  lib.rs  zero_copy_engine.rs
crates/vc-signal/: Cargo.toml
crates/vc-signal/src/: lib.rs  noise_suppress.rs
scripts/: README-onnxruntime-windows.md  convert_index_standalone.py  convert_model_only.py  convert_to_ivf.py  copy_cuda_runtime_dlls.py  export_aligned_rvc_onnx.py  export_all_dynamic.py  export_dynamic_rvc_onnx.py  export_faiss_index_bin.py  export_fixed_variants.py  export_generator_standalone.py  export_multi_static.py  export_strict_onnx.py  install_onnxruntime_directml.bat  install_onnxruntime_gpu.bat  install_onnxruntime_gpu_legacy.bat  install_onnxruntime_provider.bat  measure_group_delay.py  verify_alignment.py  verify_pipeline.py  verify_rmvpe_mel_parity.py
scripts/infer_pack/: models_onnx.py  modules.py
