[package]
name = "rust-vc-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde.workspace = true
tauri.workspace = true
libloading = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
vc-audio = { path = "../../../crates/vc-audio" }
vc-core = { path = "../../../crates/vc-core" }
vc-inference = { path = "../../../crates/vc-inference" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
